tmpis61ms46/storage/d274f1b5-c5cb-420a-86e1-1b24a6b1c1e5/compute_logs/github_stars_notebook.err
[32m2022-10-26 03:55:43 -0400[0m - dagster - [34mDEBUG[0m - daily_refresh - d274f1b5-c5cb-420a-86e1-1b24a6b1c1e5 - 3429 - github_stars_notebook - LOGS_CAPTURED - Started capturing logs for step: github_stars_notebook.
[32m2022-10-26 03:55:43 -0400[0m - dagster - [34mDEBUG[0m - daily_refresh - d274f1b5-c5cb-420a-86e1-1b24a6b1c1e5 - 3429 - github_stars_notebook - STEP_START - Started execution of step "github_stars_notebook".
[32m2022-10-26 03:55:43 -0400[0m - dagster - [34mDEBUG[0m - daily_refresh - d274f1b5-c5cb-420a-86e1-1b24a6b1c1e5 - 3429 - github_stars_notebook - ASSET_OBSERVATION - DagsterEventType.ASSET_OBSERVATION for step github_stars_notebook
[32m2022-10-26 03:55:43 -0400[0m - dagster - [34mDEBUG[0m - daily_refresh - d274f1b5-c5cb-420a-86e1-1b24a6b1c1e5 - 3429 - github_stars_notebook - LOADED_INPUT - Loaded input "github_stargazers_by_week" using input manager "io_manager", from output "result" of step "github_stargazers_by_week"
[32m2022-10-26 03:55:43 -0400[0m - dagster - [34mDEBUG[0m - daily_refresh - d274f1b5-c5cb-420a-86e1-1b24a6b1c1e5 - 3429 - github_stars_notebook - STEP_INPUT - Got input "github_stargazers_by_week" of type "Any". (Type check passed).
[32m2022-10-26 03:55:46 -0400[0m - dagster - [34mERROR[0m - [31mdaily_refresh - d274f1b5-c5cb-420a-86e1-1b24a6b1c1e5 - 3429 - github_stars_notebook - STEP_FAILURE - Execution of step "github_stars_notebook" failed.

dagster._core.errors.DagsterExecutionStepExecutionError: Error occurred while executing op "github_stars_notebook"::

nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
github_stargazers_by_week.tail(52).reset_index().plot.bar(x="week", y="users")
 ```
    
------------------

[0;36m  Cell [0;32mIn [2], line 2[0;36m[0m
[0;31m    ```[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m unexpected indent

IndentationError: unexpected indent (414324399.py, line 2)


Stack Trace:
  File "/usr/local/lib/python3.10/site-packages/dagster/_core/execution/plan/utils.py", line 47, in solid_execution_error_boundary
    yield
  File "/usr/local/lib/python3.10/site-packages/dagster/_utils/__init__.py", line 430, in iterate_with_context
    next_output = next(iterator)
  File "/usr/local/lib/python3.10/site-packages/dagster/_core/execution/plan/compute_generator.py", line 74, in _coerce_solid_compute_fn_to_iterator
    result = fn(context, **kwargs) if context_arg_provided else fn(**kwargs)
  File "/Users/diego/my-dagster-project/my_dagster_project/assets/__init__.py", line 48, in github_stars_notebook
    ExecutePreprocessor().preprocess(nb)
  File "/usr/local/lib/python3.10/site-packages/nbconvert/preprocessors/execute.py", line 91, in preprocess
    self.preprocess_cell(cell, resources, index)
  File "/usr/local/lib/python3.10/site-packages/nbconvert/preprocessors/execute.py", line 112, in preprocess_cell
    cell = self.execute_cell(cell, index, store_history=True)
  File "/usr/local/lib/python3.10/site-packages/nbclient/util.py", line 85, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/usr/local/lib/python3.10/site-packages/nbclient/util.py", line 60, in just_run
    return loop.run_until_complete(coro)
  File "/usr/local/lib/python3.10/site-packages/nest_asyncio.py", line 90, in run_until_complete
    return f.result()
  File "/usr/local/Cellar/python@3.10/3.10.6_1/Frameworks/Python.framework/Versions/3.10/lib/python3.10/asyncio/futures.py", line 201, in result
    raise self._exception.with_traceback(self._exception_tb)
  File "/usr/local/Cellar/python@3.10/3.10.6_1/Frameworks/Python.framework/Versions/3.10/lib/python3.10/asyncio/tasks.py", line 232, in __step
    result = coro.send(None)
  File "/usr/local/lib/python3.10/site-packages/nbclient/client.py", line 1019, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/usr/local/lib/python3.10/site-packages/nbclient/client.py", line 913, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
[0m
